--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://PADAR-Tech-X.github.io/portfolio",
+  "homepage": ".",
   "name": "react-portfolio-website-1",
   "version": "0.1.0",
   "private": true,
