--- a/Values.yaml
+++ b/Values.yaml
@@ -1,8 +1,8 @@
 name: pader-portfolio-deployment
 replicas: 2  
   
-image: <+artifact.image>  
-dockercfg: <+artifact.imagePullSecret>  
+image: pader/pader-portfolio
+# dockercfg: <+artifact.imagePullSecret>  
   
 createNamespace: true  
 namespace: <+infra.namespace>  
