Values.yml edited again

--- a/Values.yaml
+++ b/Values.yaml
@@ -2,7 +2,7 @@ name: pader-portfolio-deployment
 replicas: 2  
   
 image: pader/pader-portfolio
-# dockercfg: <+artifact.imagePullSecret>  
+dockercfg: <+artifact.imagePullSecret>  
   
 createNamespace: true  
 namespace: <+infra.namespace>  
