--- a/deployment.yaml
+++ b/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: portfolio
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: portfolio
@@ -16,10 +16,10 @@ spec:
     spec:
       containers:
       - name: pader-portfolio-deployment
-        image: pader/pader-portfolio
+        image: pader23/pader-portfolio
         resources:
           requests:
             cpu: "100m"
         imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 3000
+        - containerPort: 80
