--- a/service.yaml
+++ b/service.yaml
@@ -3,14 +3,15 @@ apiVersion: v1
 kind: Service
 metadata:
  # Service name
- name: pader-portfolio-deployment
+ name: pader-portfolio-service
 spec:
- selector:
+  selector:
    # Selector for Pods
-   app: portfolio
- ports:
+    app: pader-portfolio-service
+  type: LoadBalancer
+  ports:
    # Port Map
- - port: 80
-   targetPort: 3000
-   protocol: TCP
- type: LoadBalancer
+  - protocol: TCP
+    port: 8081
+    targetPort: 80
+    nodePort: 30001
